# engsci-press

./: .clang-format  .esp_rc  CMakeLists.txt
Dictionary-in-csv/: A.csv  B.csv  C.csv  D.csv  E.csv  G.csv  I.csv  K.csv  L.csv  M.csv  N.csv  O.csv  P.csv  Q.csv  S.csv
final-report/: .gitignore  main.ptc  main.tex  outline.md
final-report/images/: compact_trie.dot  figures.pptx  trie.dot
final-report/sections/: 0_title_page.tex  1_introduction.tex  2_objectives.tex  3_detailed_framework.tex  4_results.tex  5_future_work_conclusion.tex  6_appendices.tex
src/core/: array.c  array.h  dict_entry.c  dict_entry.h  global.c  global.h  matcher.c  matcher.h  string.c  string.h  trie.c  trie.h  trie_node.c  trie_node.h
src/main/: api.c  api.h  main.c  utility.c  utility.h
src/test/: array.c  dict_entry.c  global.h  matcher.c  string.c  trie.c
src/writer/: espg_base.txt  espg_lexicon.txt  grammar.py  lexicon.py  main.py  writer.py
